[tool.poetry]
name = "qctrl-jupyterhub-authenticator"
version = "0.0.0"
description = "Q-CTRL JupyterHub JWT Authenticator"
authors = ["Q-CTRL <support@q-ctrl.com>"]
readme = "README.md"
packages = [
    { include = "jwtauthenticator" },
]

[[tool.poetry.source]]
name = 'Q-CTRL PyPI'
url = 'https://pypi.q-ctrl.com/simple'

[tool.poetry.dependencies]  # https://poetry.eustace.io/docs/versions
python = ">=3.6.4, <3.8"
jupyterhub = "^1.0.0"
python-jose = "^3.0.1"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
versioning = "pep"
prereleases = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

#  _______________________________________
# / If you update this file, please run   \
# \ poetry update && dephell deps convert /
#  ---------------------------------------
#        \   ^__^
#         \  (oo)\_______
#            (__)\       )\/\
#                ||----w |
#                ||     ||
